Add Testcontainers DB